Using Java 9 features to simplify code