@@ -2,16 +2,12 @@ package com.mechanitis.demo.sense.mood;
 
 import com.mechanitis.demo.sense.service.StubService;
 
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.Random;
 import java.util.Set;
 
-import static java.util.Arrays.asList;
-
 class MoodTestData {
     private static final Set<String> POSSIBLE_MOODS
-            = Collections.unmodifiableSet(new HashSet<>(asList("HAPPY", "SAD")));
+            = Set.of("HAPPY", "SAD");
 
     public static void main(String[] args) {
         Random random = new Random();
